# ODEsolver

./: .gitignore  .travis.yml  AbstractOdeSolver.cpp  AbstractOdeSolver.hpp  AdamBashSolver.cpp  AdamBashSolver.hpp  BackwardEulerSolver.cpp  BackwardEulerSolver.hpp  CMakeLists.txt  ForwardEulerSolver.cpp  ForwardEulerSolver.hpp  FourStepSolver.cpp  FourStepSolver.hpp  GenFunctionPlotter.m  GenericFunction.cpp  GenericFunction.hpp  LICENSE  Matlabplotter.m  ODEsolver.hpp  Plot_Extinction.m  Plot_SinCos.m  Polynomial.hpp  README.md  README.rtf  README.txt  Righthandside.cpp  Righthandside.hpp  RungeKutta4Solver.hpp  SinCos.hpp  Test_GenericFunction.cpp  Test_SinCos.cpp  Test_logistic_extinction.cpp  ThreeStepSolver.cpp  ThreeStepSolver.hpp  TwoStepSolver.cpp  TwoStepSolver.hpp  main.cpp
Documentatation/: doxygen_entrydb_1585.tmp
Documentatation/html/: _abstract_ode_solver_8hpp_source.html  _backward_euler_solver_8hpp_source.html  _forward_euler_solver_8hpp_source.html  _four_step_solver_8hpp_source.html  _generic_function_8hpp_source.html  _o_d_esolver_8hpp_source.html  _polynomial_8hpp_source.html  _righthandside_8hpp_source.html  files.html  (+33 more)
ODEsolver/: .travis.yml  CMakeLists.txt
ODEsolver/include/: AbstractOdeSolver.hpp  BackwardEulerSolver.hpp  ForwardEulerSolver.hpp  FourStepSolver.hpp  GenericFunction.hpp  ODEsolver.hpp  Polynomial.hpp  Righthandside.hpp  RungeKutta4Solver.hpp  SinCos.hpp  ThreeStepSolver.hpp  TwoStepSolver.hpp
ODEsolver/src/: AbstractOdeSolver.cpp  BackwardEulerSolver.cpp  ForwardEulerSolver.cpp  FourStepSolver.cpp  GenericFunction.cpp  Righthandside.cpp  Rungekutta4Solver.cpp  ThreeStepSolver.cpp  TwoStepSolver.cpp
test/: CMakeLists.txt  Plot_GenFunction.m  Test_GenericFunction.cpp  Test_SinCos.cpp  Test_logistic_extinction.cpp  plot_extinction_runge.m
(+47 files in other folders)
